2/10/25 8:30  PM -- finish serialization procedure
2/10/25 9:30  PM -- finish deserialization procedure
2/10/25 9:45  PM -- debug room size realloc bug and add dungeon zeroing helper
2/10/25 10:00 PM -- test file i/o and begin args handling
2/10/25 10:30 PM -- finish args handling, add automatic directory creation
2/10/25 10:45 PM -- add player character visual, verify using all premade dungeons
2/10/25 10:55 PM -- fix leaks found by valgrind
2/10/25 11:10 PM -- handle missing files when loading, update readme
2/11/25 9:30  PM -- make PC location persistant when loading/saving simultaneously

2/13/25 4:30  PM -- add colorful output
2/16/25 4:00  PM -- add fib heap from 1.01 solution
2/16/25 4:20  PM -- reformat fib heap
2/16/25 8:00  PM -- updated player character support and dungeon struct
2/16/25 8:30  PM -- inlined geometry vector utilities and added equality check
2/16/25 10:00 PM -- add dijkstras for corridor pathing - weight initialization bugged
2/16/25 10:30 PM -- fix corridor pathing, tune perline noise, add microsecond-based seeding
2/17/25 1:00  PM -- add generalized dijkstras + terrain, floor, and corridor algorithms
2/17/25 1:30  PM -- print floor and terrain cost maps
2/17/25 8:30  PM -- update makefile and readme

2/23/25 10:00 PM -- some refactoring, add entity + dungeon level structs
2/24/25 2:00  PM -- nummon flag handler, add dungeon level utilities
2/24/25 5:00  PM -- add random monster generation
2/24/25 9:00  PM -- create simulation loop, successfully create entity processing queue, add signal handling
2/25/25 3:30  PM -- begin entity/monster behavior control
2/26/25 4:00  PM -- refactor utility functions, remove unused files
2/26/25 9:00  PM -- refactor entity/monster structs, add support for generic pathing
2/26/25 11:00 PM -- refactor dungeon functions, add random movement + terrain and entity collition handling
2/27/25 12:30 AM -- correctly handle terrain breaks, add win/lose status, fix memory leaks