@@ -26,11 +26,12 @@ int init_pathing_buffer(PathFindingBuffer* buff)
 int dungeon_dijkstra_single_path(
     PathFindingBuffer* buff,
     DungeonMap* d,
+    void* out,
     Vec2u from,
     Vec2u to,
     int(*should_use_cell)(const DungeonMap*, uint32_t x, uint32_t y),
     int32_t(*cell_weight)(const DungeonMap*, uint32_t x, uint32_t y),
-    void(*on_cell_path)(DungeonMap*, uint32_t x, uint32_t y),
+    void(*on_cell_path)(void*, uint32_t x, uint32_t y),
     int use_diag )
 {
     CellPathNode *p;
@@ -78,7 +79,7 @@ int dungeon_dijkstra_single_path(
         // EXPORT PATH
             for(vec2u8_copy(&iter8, &to8); !vec2u8_equal(&iter8, &from8); vec2u8_copy(&iter8, &p->from))
             {
-                on_cell_path(d, iter8.x, iter8.y);
+                on_cell_path(out, iter8.x, iter8.y);
                 p = &buff->nodes[iter8.y][iter8.x];
             }
             heap_delete(&h);
@@ -107,6 +108,7 @@ int dungeon_dijkstra_single_path(
             CHECK_NEIGHBOR(p->pos.x + 1, p->pos.y - 1)
             CHECK_NEIGHBOR(p->pos.x + 1, p->pos.y + 1)
         }
+    #undef CHECK_NEIGHBOR
     }
 
     return -1;
@@ -156,10 +158,11 @@ int dungeon_dijkstra_traverse_grid(
     {
         p->hn = NULL;   // node was deleted from the heap
 
-        const int32_t p_cost = p->cost + cell_weight(d, p->pos.x, p->pos.y);
+        int32_t p_cost;
 
         // CHECK CARDINAL DIRECTIONS
     #define CHECK_NEIGHBOR(x, y) \
+        p_cost = p->cost + cell_weight(d, x, y); \
         if( (buff->nodes[(y)][(x)].hn) && (buff->nodes[(y)][(x)].cost > p_cost) ) \
         { \
             buff->nodes[(y)][(x)].cost = p_cost; \
@@ -178,6 +181,7 @@ int dungeon_dijkstra_traverse_grid(
             CHECK_NEIGHBOR(p->pos.x + 1, p->pos.y - 1)
             CHECK_NEIGHBOR(p->pos.x + 1, p->pos.y + 1)
         }
+    #undef CHECK_NEIGHBOR
     }
 
     heap_delete(&h);
@@ -194,9 +198,9 @@ static int32_t corridor_path_cell_weight(const DungeonMap* d, uint32_t x, uint32
 {
     return (int32_t)d->hardness[y][x];
 }
-static void corridor_path_export(DungeonMap* d, uint32_t x, uint32_t y)
+static void corridor_path_export(void* d, uint32_t x, uint32_t y)
 {
-    d->terrain[y][x].type = CORRIDOR;
+    ((DungeonMap*)d)->terrain[y][x].type = CORRIDOR;
 }
 
 int dungeon_dijkstra_corridor_path(DungeonMap* d, Vec2u from, Vec2u to)
@@ -207,7 +211,7 @@ int dungeon_dijkstra_corridor_path(DungeonMap* d, Vec2u from, Vec2u to)
     if(!init) init_pathing_buffer(&buff);
 
     return dungeon_dijkstra_single_path(
-        &buff, d, from, to,
+        &buff, d, d, from, to,
         corridor_path_should_use,
         corridor_path_cell_weight,
         corridor_path_export,
@@ -251,5 +255,42 @@ int dungeon_dijkstra_traverse_terrain(DungeonMap* d, Vec2u from, PathFindingBuff
         buff, d, from,
         terrain_traversal_should_use,
         terrain_traversal_cell_weight,
+        1 );
+}
+
+
+
+int dungeon_dijkstra_floor_path(
+    DungeonMap* d,
+    Vec2u from, Vec2u to,
+    void* out, void(*on_path_cell)(void*, uint32_t x, uint32_t y) )
+{
+    static PathFindingBuffer buff;
+    static uint32_t init = 0;
+
+    if(!init) init_pathing_buffer(&buff);
+
+    return dungeon_dijkstra_single_path(
+        &buff, d, out, from, to,
+        floor_traversal_should_use,
+        floor_traversal_cell_weight,
+        on_path_cell,
+        1 );
+}
+int dungeon_dijkstra_terrain_path(
+    DungeonMap* d,
+    Vec2u from, Vec2u to,
+    void* out, void(*on_path_cell)(void*, uint32_t x, uint32_t y) )
+{
+    static PathFindingBuffer buff;
+    static uint32_t init = 0;
+
+    if(!init) init_pathing_buffer(&buff);
+
+    return dungeon_dijkstra_single_path(
+        &buff, d, out, from, to,
+        terrain_traversal_should_use,
+        terrain_traversal_cell_weight,
+        on_path_cell,
         1 );
 }
